verification/tutorial_plume_on_slope/single_core/genmake.log
Get compiler version using: gfortran --version
/iridisfs/i6software/gcc/15.2.0/install/bin/gfortran
GNU Fortran (GCC) 15.2.0
Copyright (C) 2025 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

<-- compiler version ----

running: check_fortran_compiler
 gfortran -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -c genmake_tcomp.f
 gfortran -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -o genmake_tcomp genmake_tcomp.o -L/iridisfs/i6software/netcdf/gcc_15.2/Fortran/lib64 -lnetcdff -lnetcdf
/iridisfs/i6software/binutils/2.42/install/bin/ld: cannot find -lnetcdf: No such file or directory
collect2: error: ld returned 1 exit status

 Warning: FORTRAN compiler test fails to link
 --> set FC_CHECK= 1 /5

running: look_for_makedepend()
 --> set MAKEDEPEND=$(TOOLSDIR)/xmakedepend

running: check_HAVE_CLOC()
 running: get_fortran_c_namemangling()
 gcc -O0 -mcmodel=medium -c genmake_test.c
genmake_test.c: In function ‘tcall’:
genmake_test.c:1:31: error: implicit declaration of function ‘tsub’ [-Wimplicit-function-declaration]
    1 | void tcall( char * string ) { tsub( string ); }
      |                               ^~~~

 WARNING: C test compile fails
 WARNING: We'll try to use: FC_NAMEMANGLE='#define FC_NAMEMANGLE(X) X ## _'
 WARNING: Please contact <MITgcm-support@mitgcm.org> if you need help here
gcc -O0 -mcmodel=medium -c genmake_tc_1.c
gfortran -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -o genmake_tc genmake_tc_2.f genmake_tc_1.o
  HELLO WORLD   1781171287.3702061     
 --> set HAVE_CLOC='t'

running: check_HAVE_SETRLSTK()
gcc -O0 -mcmodel=medium -c genmake_tc_1.c
      program hello
      external setrlstk
      call setrlstk()
      end
gfortran -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_SETRLSTK='t'

running: check_HAVE_SIGREG()
gcc -O0 -mcmodel=medium -c genmake_tc_1.c
genmake_tc_1.c:11:44: warning: ‘struct ucontext’ declared inside parameter list will not be visible outside of this definition or declaration
   11 |     unsigned int sn, siginfo_t  si, struct ucontext *sc )
      |                                            ^~~~~~~~
      program hello
      integer anint
      common /iv/ anint
      external sigreg
      call sigreg(anint)
      end
gfortran -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_SIGREG='t'

running: check_HAVE_STAT()
gcc -O0 -mcmodel=medium -c genmake_tc_1.c
      program hello
      integer nbyte
      call tfsize(nbyte)
      print *," HELLO WORLD", nbyte
      end
gfortran -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_STAT='t'

running: check_netcdf_libs()
===  genmake_tnc.F  >>>
      program fgennc
#include "netcdf.inc"
      integer iret, ncid, xid
      iret = nf_create('genmake_tnc.nc', NF_CLOBBER, ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_def_dim(ncid, 'X', 11, xid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_close(ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      end
<<<  genmake_tnc.F  ===
cat genmake_tnc.F |  cpp -traditional -P -DWORDLENGTH=4 -DNML_TERMINATOR -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_SBR -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT -I/iridisfs/i6software/netcdf/gcc_15.2/Fortran/include
gfortran  -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -c genmake_tnc.f  \ 
  &&  gfortran  -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -o genmake_tnc genmake_tnc.o -L/iridisfs/i6software/netcdf/gcc_15.2/Fortran/lib64 -lnetcdff -lnetcdf
/iridisfs/i6software/binutils/2.42/install/bin/ld: cannot find -lnetcdf: No such file or directory
collect2: error: ld returned 1 exit status

==> try again with added '-lnetcdf'
cat genmake_tnc.F |  cpp -traditional -P -DWORDLENGTH=4 -DNML_TERMINATOR -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_SBR -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT -I/iridisfs/i6software/netcdf/gcc_15.2/Fortran/include > genmake_tnc.f \ 
 &&  gfortran  -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -c genmake_tnc.f \ 
 &&  gfortran  -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -o genmake_tnc genmake_tnc.o -L/iridisfs/i6software/netcdf/gcc_15.2/Fortran/lib64 -lnetcdff -lnetcdf -lnetcdf
/iridisfs/i6software/binutils/2.42/install/bin/ld: cannot find -lnetcdf: No such file or directory
/iridisfs/i6software/binutils/2.42/install/bin/ld: cannot find -lnetcdf: No such file or directory
collect2: error: ld returned 1 exit status

==> try again with added '-lnetcdff -lnetcdf'
cat genmake_tnc.F |  cpp -traditional -P -DWORDLENGTH=4 -DNML_TERMINATOR -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_SBR -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT -I/iridisfs/i6software/netcdf/gcc_15.2/Fortran/include > genmake_tnc.f \ 
 &&  gfortran  -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -c genmake_tnc.f \ 
 &&  gfortran  -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -o genmake_tnc genmake_tnc.o -L/iridisfs/i6software/netcdf/gcc_15.2/Fortran/lib64 -lnetcdff -lnetcdf -lnetcdff -lnetcdf
/iridisfs/i6software/binutils/2.42/install/bin/ld: cannot find -lnetcdf: No such file or directory
/iridisfs/i6software/binutils/2.42/install/bin/ld: cannot find -lnetcdf: No such file or directory
collect2: error: ld returned 1 exit status
 --> set HAVE_NETCDF=''

running: check_HAVE_FLUSH()
===  genmake_tflsh.f  >>>
      program fgenflsh
      integer iounit
      character*9 fname
      iounit = 26
      fname = 'tmp.tflsh'
      open(iounit,FILE=fname,STATUS='unknown')
      write(iounit,*) 'genmake_tflsh: hello'
      call flush(iounit)
      close(iounit)
      end
<<<  genmake_tflsh.f  ===
gfortran  -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -c genmake_tflsh.f  \ 
  &&  gfortran  -fallow-argument-mismatch -fconvert=big-endian -fimplicit-none -mcmodel=medium -O3 -funroll-loops -o genmake_tflsh.o -L/iridisfs/i6software/netcdf/gcc_15.2/Fortran/lib64 -lnetcdff -lnetcdf
/iridisfs/i6software/binutils/2.42/install/bin/ld: cannot find -lnetcdf: No such file or directory
collect2: error: ld returned 1 exit status
 --> set HAVE_FLUSH='f'
